--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -1,17 +1,18 @@
 .friendItem {
-    border-radius: 4px;
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     text-align: center;
     margin-bottom: 10px;
-    background-color: #fffdfa;
+background: #EEAECA;
+    background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
     cursor: pointer;
-    outline: 1px solid rgb(182, 182, 182);
     transition: box-shadow 400ms ease;
+    width: 80px;
 }
 
 .friendItem:hover {
-    box-shadow: 8px 8px 16px #bebebe, -8px -8px 16px #ffffff;
+    box-shadow: 0 0 10px 5px magenta;
 }
 
 .avatar {
@@ -24,6 +25,7 @@
 
 .name {
     color: black;
+    font-weight: bold;
     font-size: 16px;
     margin: 5px 0;
 }
